--- a/src/app/app.html
+++ b/src/app/app.html
@@ -226,7 +226,7 @@
         </defs>
       </svg>
       <h1>Hello, {{ title }}</h1>
-      <p>Congratulations! Ypipom 🎉</p>
+      <p>Congratulations! felipito 🎉</p>
     </div>
     <div class="divider" role="separator" aria-label="Divider"></div>
     <div class="right-side">
